Hanimi Org/src/objects/MyChart__c.object
<CustomObject>
    <fields>
        <fullName>apiVersion__c</fullName>
        <label>apiVersion</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>height__c</fullName>
        <description>The height of the chart, in pixels.</description>
        <label>height</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>imgData__c</fullName>
        <label>imgData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>reportApiUrl__c</fullName>
        <label>reportApiUrl</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reportId__c</fullName>
        <description>The Id of the report from which this chart is derived from.  This should have been a lookup, but it appears that reports are not first class objects.</description>
        <label>reportId</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <description>The value of all charting options, especially the names of fields of reports and how they map to different chart characteristics.</description>
        <label>state</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <description>The type of the chart, i.e., bar, line, scatter, etc.</description>
        <label>type</label>
        <picklist>
            <picklistValues>
                <fullName>barVertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>barHorizontal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>steppedArea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>scatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>treemap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MyChart</label>
    <nameField>
        <label>MyChart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyCharts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>